Implement flex content and start Project coding

--- a/html-app/style/home-style.css
+++ b/html-app/style/home-style.css
@@ -1,3 +1,12 @@
+body {
+    margin: 0;
+}
+
+.section {
+    min-height: 500px;
+    border: 1px solid black;
+}
+
 .flex-column {
     display: flex;
     flex-direction: column;
@@ -11,6 +20,21 @@
 .center {
     justify-content: center;
     align-items: center;
+}
+
+.wrap {
+    flex-wrap: wrap;
+}
+
+.project-cell-container {
+    padding: 15px;
+    margin: 15px;
+    border: 1px solid black;
+    max-width: 25vw;
+}
+
+.project-cell {
+    padding: 15px;
 }
 
 /* Tablet Styles */
