--- a/html-app/style/home-style.css
+++ b/html-app/style/home-style.css
@@ -18,6 +18,7 @@ html {
 
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -52,6 +53,7 @@ h3 {
 
 .section {
     min-height: 500px;
+    z-index: 2;
 }
 
 .flex-column, #courses-container {
@@ -74,24 +76,34 @@ h3 {
 }
 
 #intro-container {
-    background-color: var(--darkback);
-    background-size: cover;
-    background-position: 0px;
-    background-image: linear-gradient(90deg, #33353388 0%, #33353344 58.88%, #00000000 100%), url('../img/intro-background.jpg');
-    animation-name: backgroundscroller;
-    animation-duration: 300s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: normal;
     color: var(--lighttext);
     height: 100vh;
 }
 
+#intro-video {
+    position: fixed;
+    z-index: 1;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+#intro {
+    width: 100vw;
+    height: 100vh;
+    min-height: 500px;
+    background-color: rgba(23, 24, 23, 0.75);
+    z-index: 2;
+}
+
 #about-container {
-    /* background-color: var(--lighttext); */
+    background-color: var(--lighttext);
     color: var(--darktext);
     display: flex;
     flex-direction: column;
+}
+
+#about {
+    background-color: var(--lighttext);
 }
 
 #about-pic {
@@ -168,6 +180,7 @@ h3 {
 
 #experience-container {
     padding: 50px 0 0 0;
+    background-color: var(--lighttext);
 }
 
 .resume-buttons {
@@ -189,6 +202,10 @@ h3 {
     cursor: pointer;
     background-color: var(--darkback);
     transition: all 0.15s ease-in-out;
+}
+
+#education-container {
+    background-color: var(--lighttext);
 }
 
 .half-section {
